ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-init-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /student
        backend:
          serviceName: k8s-init-service
          servicePort: 80
